# django-feedo

./: .flake8  .gitignore  README.md  docker-compose.yml  feedoenv.conf  pylintrc  pyproject.toml
feedo/: Dockerfile  conftest.py  manage.py  pyproject.toml  pytest.ini  wsgi.py
feedo/applications/async_update/: celery.py  tasks.py
feedo/applications/async_update/tests/: test_regular_tasks.py
feedo/applications/authentication/: apps.py  filters.py  middlewares.py  urls.py  views.py
feedo/applications/authentication/jinja2/: sign_in.html  sign_up.html
feedo/applications/authentication/tests/: test_auth.py
feedo/applications/base/: filters.py  jinja_register.py  model_mixins.py  views_mixins.py
feedo/applications/base/jinja2/: base.html
feedo/applications/feed/: apps.py  const.py  models.py  service.py
feedo/applications/feed/migrations/: 0001_initial.py
feedo/applications/feed/tests/: entries.py  factories.py  test_feeds_unit.py
feedo/applications/index/: apps.py  views.py
feedo/applications/index/jinja2/: index_sign_up.html
feedo/applications/subscription/: __init__.py  apps.py  forms.py  models.py  service.py  urls.py  views.py
feedo/applications/subscription/jinja2/: _post_list.html  post_detail.html  post_favourites.html  post_list.html  post_list_new.html  subscription_confirm_delete.html  subscription_detail.html  subscription_form.html  subscription_list.html
feedo/applications/subscription/jinja2/include/: pagination.html  post_preview.html
feedo/applications/subscription/migrations/: 0001_initial.py
feedo/applications/subscription/templatetags/: extras.py
feedo/applications/subscription/tests/: factories.py  test_posts.py  test_subscriptions.py  test_subscriptions_unit.py
feedo/conf/: jinja2.py  settings.py  urls.py
feedo/install_resources/: celery.sh  nginx.conf  run_tests.sh  start.sh  uwsgi.ini
